--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -27,3 +27,15 @@ import ProjectList from "../components/ProjectList.astro";
 (from the newest to the oldest)
 
 <ProjectList past="true" />
+
+## FAQ
+
+### How to become a member?
+
+*Are you an active builder in the Czech-Slovak community? Join us!*
+
+You can become a member by being invited by a current member.
+
+### What guarantees the neutrality of Gwei.cz?
+
+The current Gwei.cz is just a loosely-coupled group of many different individuals (and their projects), united only by a common interest in improving adoption and awareness of cryptocurrencies, decentralization or open-source projects in the local environment. Gwei.cz has no governance (no leadership) or "official" communication channels and all members are equal.
