license, source code

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -30,12 +30,22 @@ import ProjectList from "../components/ProjectList.astro";
 
 ## FAQ
 
+### What guarantees the neutrality of Gwei.cz?
+
+The current Gwei.cz is just a loosely-coupled group of many different individuals (and their projects), united only by a common interest in improving adoption and awareness of cryptocurrencies, decentralization or open-source projects in the local environment. Gwei.cz has no governance (no leadership) or "official" communication channels and all members are equal.
+
 ### How to become a member?
 
 *Are you an active builder in the Czech-Slovak community? Join us!*
 
 You can become a member by being invited by a current member.
 
-### What guarantees the neutrality of Gwei.cz?
+## Source code
 
-The current Gwei.cz is just a loosely-coupled group of many different individuals (and their projects), united only by a common interest in improving adoption and awareness of cryptocurrencies, decentralization or open-source projects in the local environment. Gwei.cz has no governance (no leadership) or "official" communication channels and all members are equal.
+https://github.com/gweicz/web-new
+
+*Feel free to edit!*
+
+## License
+
+<a href="https://creativecommons.org/public-domain/cc0/"><img src="/cc0.svg" title="CC0" /></a>
