--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -35,13 +35,13 @@ import ProjectList from "../components/ProjectList.astro";
 The current Gwei.cz is just a loosely-coupled group of many different individuals (and their projects), united only by a common interest in improving adoption and awareness of cryptocurrencies, decentralization or open-source projects in the local environment.
 
 Current Gwei.cz:
-* no governance (no leadership)
-* no "official" communication channels (like Twitter etc.)
+* has no governance (no leadership)
+* has no "official" communication channels (like Twitter etc.)
 * all members are equal
 
 ### What happened with the old Gwei.cz?
 
-All previous internal Gwei.cz activities such as Twitter, Matrix, Forum and [other services](https://status.gwei.cz/) are being gradually phased out and called [Gwei.cz Legacy](https://legacy.gwei.cz).
+All previous internal Gwei.cz activities such as Twitter, Matrix, Forum and [other services](https://status.gwei.cz/) are being gradually phased out as [Gwei.cz Legacy](https://legacy.gwei.cz).
 
 ### How to become a member?
 
