--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -6,6 +6,19 @@ Gwei.cz is an agnostic collective of builders from various crypto, decentralizat
 
 Our goal is to bring active builders together to support each other and coordinate how to drive local adoption, educate newcomers, and raise awareness of the benefits of decentralized technologies and open-source software.
 
+## Upcoming Events
+
+<iframe
+  src="https://lu.ma/embed/calendar/cal-skKYTNtURW9T1wD/events?lt=light"
+  width="600"
+  height="450"
+  frameborder="0"
+  style="border: 1px solid #bfcbda88; border-radius: 4px;"
+  allowfullscreen=""
+  aria-hidden="false"
+  tabindex="0"
+></iframe>
+
 ## Members
 
 (in random order)
