make project img size little bigger

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -21,7 +21,7 @@ Our goal is to bring active builders together to support each other and coordina
 
 ## Members
 
-(in random order)
+*(in random order)*
 
 import MemberList from "../components/MemberList.astro";
 
@@ -29,7 +29,7 @@ import MemberList from "../components/MemberList.astro";
 
 ## Active Projects
 
-(from the newest to the oldest)
+*(from the newest to the oldest)*
 
 import ProjectList from "../components/ProjectList.astro";
 
@@ -37,7 +37,7 @@ import ProjectList from "../components/ProjectList.astro";
 
 ## Past Projects
 
-(from the newest to the oldest)
+*(from the newest to the oldest)*
 
 <ProjectList past="true" />
 
