--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -21,7 +21,7 @@ Our goal is to bring active builders together to support each other and coordina
 
 import { members, projects } from '../data.yaml'
 
-## Members ({members.length})
+## Members ({members.filter(m => m.confirmed !== false).length})
 
 *(in random order)*
 
