--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -43,16 +43,19 @@ import ProjectList from "../components/ProjectList.astro";
 
 <ProjectList past="true" />
 
+## Rules
+
+1. All members are equal.
+1. No governance (or leadership).
+1. No official communication channels (like Twitter).
+1. To become a new member you must be an active builder (*Proof of Work*) and be invited by a current member.
+1. A majority of members may decide to remove a member.
+
 ## FAQ
 
 ### What guarantees the neutrality of Gwei.cz?
 
-The current Gwei.cz is just a loosely-coupled group of many different individuals (and their projects), united only by a common interest in improving adoption and awareness of cryptocurrencies, decentralization or open-source projects in the local environment.
-
-Current Gwei.cz:
-* has no governance (no leadership)
-* has no "official" communication channels (like Twitter etc.)
-* all members are equal
+The current Gwei.cz is just a loosely-coupled group of many different individuals (and their projects) where neutrality is guaranteed mainly through our basic rules, such as zero governance or the absence of official channels.
 
 ### What happened with the old Gwei.cz?
 
