--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -50,6 +50,7 @@ import ProjectList from "../components/ProjectList.astro";
 1. No official communication channels (like Twitter).
 1. To become a new member you must be an active builder (*Proof of Work*) and be invited by a current member.
 1. A majority of members may decide to remove a member.
+1. All members are listed on the website where everyone has the opportunity to list their projects.
 
 ## FAQ
 
