--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,6 +8,8 @@ Our goal is to bring active builders together to support each other and coordina
 
 ## Upcoming Events
 
+* [Gwei.cz calendar on Lu.ma](https://lu.ma/gweicz)
+
 <iframe
   src="https://lu.ma/embed/calendar/cal-skKYTNtURW9T1wD/events?lt=light"
   width="600"
