project icons on the top

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -6,6 +6,10 @@ Gwei.cz is an agnostic collective of individuals from various crypto, decentrali
 
 Our goal is to bring active builders together to support each other and coordinate how to drive local adoption, educate newcomers, and raise awareness of the benefits of decentralized technologies and open-source software.
 
+import FeaturedProjects from "../components/FeaturedProjects.astro";
+
+<FeaturedProjects />
+
 ## Upcoming Events
 
 * [Gwei.cz calendar on Lu.ma](https://lu.ma/gweicz)
