--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -2,13 +2,15 @@
 layout: ../layouts/base.astro
 ---
 
-Gwei.cz is an agnostic collective of individuals from various crypto, decentralization and peer-to-peer communities in and around Czechia. The group assembled in 2020 as online community focused on Ethereum and has been active since.
+Gwei.cz is an agnostic collective of [individuals](#members) from various crypto, decentralization and peer-to-peer communities in and around Czechia. The group assembled in 2020 as online community focused on Ethereum and has been active since.
 
 Our goal is to bring active builders together to support each other and coordinate how to drive local adoption, educate newcomers, and raise awareness of the benefits of decentralized technologies and open-source software.
 
 import FeaturedProjects from "../components/FeaturedProjects.astro";
 
 <FeaturedProjects />
+
+[Upcoming Events](#upcoming-events) | [Members](#members) | [Active Projects of Members](#active-projects) | [Past Project of Members](#past-projects) | [Basic Rules](#basic-rules) | [Code of Conduct](#code-of-conduct) | [FAQ](#faq) | [Source Code](#source-code) | [License](#license)
 
 ## Upcoming Events
 
@@ -27,7 +29,9 @@ import FeaturedProjects from "../components/FeaturedProjects.astro";
 
 import { members, projects } from "../data.yaml";
 
-## Members ({members.filter(m => m.confirmed !== false).length})
+<h2 id="members">
+  Members ({members.filter((m) => m.confirmed !== false).length})
+</h2>
 
 _(in random order)_
 
@@ -35,7 +39,10 @@ import MemberList from "../components/MemberList.astro";
 
 <MemberList />
 
-## Active Projects of Members ({projects.filter(p => p.past !== true && p.confirmed !== false).length})
+<h2 id="active-projects">
+  Active Projects of Members (
+  {projects.filter((p) => p.past !== true && p.confirmed !== false).length})
+</h2>
 
 _(from the newest to the oldest)_
 
@@ -43,7 +50,10 @@ import ProjectList from "../components/ProjectList.astro";
 
 <ProjectList />
 
-## Past Projects of Members ({projects.filter(p => p.past === true && p.confirmed !== false).length})
+<h2 id="past-projects">
+  Past Projects of Members (
+  {projects.filter((p) => p.past === true && p.confirmed !== false).length})
+</h2>
 
 _(from the newest to the oldest)_
 
@@ -96,7 +106,7 @@ _Are you an active builder in the Czech-Slovak community? Join us!_
 
 You can become a member by being invited by a current member.
 
-## Source code
+## Source Code
 
 https://github.com/gweicz/web-v3
 
