--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -106,6 +106,20 @@ _Are you an active builder in the Czech-Slovak community? Join us!_
 
 You can become a member by being invited by a current member.
 
+## History
+
+- Q3/2024 - Transformation towards neutrality [V3].
+- Q2/2023 - Co-organizing of Prague Blockchain Week 2023.
+- Q2/2023 - Boostrapping Web3Privacy Now iniative.
+- Q4/2022 - Our first hackathon ETHBrno×2.
+- Q4/2022 - Start of "Lunarpunk Era" (migration to Matrix) [V2].
+- Q2/2022 - Co-organizing of UTXO Prague conference.
+- Q4/2021 - Our first conference ETHBrno 2021.
+- Q2/2021 - Summoning of BohemianDAO.
+- Q1/2021 - First online community calls.
+- Q3/2020 - First offline community-meetup.
+- Q1/2020 - Gwei.cz community founded (Discord) [V1].
+
 ## Source Code
 
 https://github.com/gweicz/web-v3
