add history shortcut

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,7 +10,7 @@ import FeaturedProjects from "../components/FeaturedProjects.astro";
 
 <FeaturedProjects />
 
-[Upcoming Events](#upcoming-events) | [Members](#members) | [Active Projects of Members](#active-projects) | [Past Project of Members](#past-projects) | [Basic Rules](#basic-rules) | [Code of Conduct](#code-of-conduct) | [FAQ](#faq) | [Source Code](#source-code) | [License](#license)
+[Upcoming Events](#upcoming-events) | [Members](#members) | [Active Projects of Members](#active-projects) | [Past Project of Members](#past-projects) | [Basic Rules](#basic-rules) | [Code of Conduct](#code-of-conduct) | [FAQ](#faq) | [History](#history) | [Source Code](#source-code) | [License](#license)
 
 ## Upcoming Events
 
