--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -6,9 +6,23 @@ Gwei.cz is an agnostic collective of [individuals](#members) from various crypto
 
 Our goal is to bring active builders together to support each other and coordinate how to drive local adoption, educate newcomers, and raise awareness of the benefits of decentralized technologies and open-source software.
 
+### [People](#members)
+
+import FeaturedMembers from "../components/FeaturedMembers.astro";
+
+<FeaturedMembers />
+
+### [Projects](#active-projects)
+
 import FeaturedProjects from "../components/FeaturedProjects.astro";
 
 <FeaturedProjects />
+
+### [Supported protocols and networks](#protocols)
+
+import FeaturedProtocols from "../components/FeaturedProtocols.astro";
+
+<FeaturedProtocols />
 
 [Upcoming Events](#upcoming-events) | [Members](#members) | [Active Projects of Members](#active-projects) | [Past Project of Members](#past-projects) | [Supported protocols and networks](#protocols) | [Basic Rules](#basic-rules) | [Code of Conduct](#code-of-conduct) | [FAQ](#faq) | [History](#history) | [Source Code](#source-code) | [License](#license)
 
