--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -4,7 +4,7 @@ layout: ../layouts/base.astro
 
 Gwei.cz is an agnostic collective of [individuals](#members) from various crypto, decentralization and peer-to-peer communities in and around Czechia. The group assembled in 2020 as online community focused on Ethereum and has been active since.
 
-Our goal is to bring active builders together to support each other and coordinate how to drive local adoption, educate newcomers, and raise awareness of the benefits of decentralized technologies and open-source software.
+Our goal is to bring active builders together to support each other and coordinate how to drive local adoption, educate newcomers, and raise awareness of the benefits of [decentralized technologies](#protocols) and open-source software.
 
 ### [People](#members)
 
